Improve alerting state handling (#997)
* Merge AlertExpressionEvaluator and ExpressionEvaluationStep for easier understanding

* Change state manager from global instance to per-rule instance

* Remove prevState from EvaluationContext

* Remove record id from EvaluationContext

* Construct log writer inside the AlertEvaluator

* Merge evaluationOutputs and seriesStates as one

* Fix some states

* Fix states

* Don't render image for RESOLVED message

* Move expiration to ctor

* Uplift last evaluation timestamp

* Return lastEvaluatedAt

* Fix lastEvaluatedAt

* Contain RESOLVED labels in the resolved message

* Fix change log payload